[tool.poetry]
name = "shiki.py"
version = "0.1.0"
description = ""
authors = ["Snayt1k3 <snayt1k3twitch@gmail.com>"]
readme = "README.md"
packages = [{include = "shikimori"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.1"
tomli = "^2.0.1"
setuptools = "^69.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"

[build-system]
requires = [
    "setuptools",
    "tomli",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"