[tool.poetry]
name = "shiki.py"
version = "1.1.3"
description = "Python Async Wrapper for Shikimori Api"
authors = ["Snayt1k3 <snayt1k3twitch@gmail.com>"]
readme = "README.md"
packages = [{include = "shikimori"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.3"
tomli = "^2.0.1"
setuptools = "^69.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
black = "^24.2.0"
python-dotenv = "^1.0.1"
pytest-cov = "^5.0.0"


[tool.poetry.group.docs.dependencies]
sphinx = "^7.3.7"
readthedocs-sphinx-search = "^0.3.2"
furo = "^2024.4.27"
sphinx-hoverxref = "^1.3.0"

[build-system]
requires = [
    "setuptools",
    "tomli",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"